--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
   [class*="nav-button"] {
     top: 70% !important; /* Las baja un poco más */
   }
+
+  /* Aseguramos que el buscador tenga espacio */
+  header + div, 
+  .min-h-screen {
+    padding-top: 140px !important; /* Empuja todo el contenido hacia abajo para que el Header no tape nada */
+  }
 }
 
 .logo {
