--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+  overflow-x: hidden;
+}
 .gradient-header {
   top: -112px;
   bottom: -50px;
